# webalizer

./: .gitignore  AUTHORS  CHANGES  Copyright  DNS.README  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.std  README  README.FIRST  README.IPv6  REDHAT.README  aclocal.m4  agent_mangle.c  agent_mangle.txt  config.cache  config.h.in  config.status  configure  configure.ac  configure.in  convertlang2po.py  country-codes.txt  ctry.h  dns_resolv.c  dns_resolv.h  gdfontg.c  gdfontl.c  gdfontmb.c  gdfonts.c  gdfontt.c  graphs.c  graphs.h  hashtab.c  hashtab.h  lang.h  lang2.h  lang_po.sh  (+33 more)
CVS/: Entries
debian/: GeoIP.dat.gz.uue  README.Debian  README.debian  changelog  conffiles  config  control  copyright  cron-multiple-config  dirs  docs  examples  links  postinst  postrm  rules  templates  watch  webalizer.1  webalizer.cron.daily  webalizer.examples
debian/GeoIP-1.4.0/: ChangeLog  Makefile.in  README  aclocal.m4  config.guess  config.sub  configure  ltmain.sh
debian/GeoIP-1.4.0/apps/: Makefile.in  geoipupdate.c
debian/GeoIP-1.4.0/conf/: GeoIP.conf.default  Makefile.in
debian/GeoIP-1.4.0/data/: Makefile.in
debian/GeoIP-1.4.0/libGeoIP/: GeoIP.c  GeoIPCity.c  GeoIPUpdate.c  Makefile.in  md5.h  types.h
debian/GeoIP-1.4.0/man/: Makefile.in
debian/GeoIP-1.4.0/test/: Makefile.in
debian/GeoIP-1.4.4/: COPYING  GeoIPWinDLL.patch  Makefile.in  Makefile.netware  TODO  aclocal.m4  configure
debian/GeoIP-1.4.4/apps/: geoiplookup.c  geoipupdate.c
debian/GeoIP-1.4.4/conf/: Makefile.in
debian/GeoIP-1.4.4/libGeoIP/: GeoIPCity.c  timeZone.c
debian/GeoIP-1.4.4/man/: Makefile.in
debian/GeoIP-1.4.4/test/: benchmark.c
debian/GeoIP-lib/: ChangeLog  GeoIP.spec  GeoIPWinDLL.patch  Makefile.vc  Makefile.win32  README  READMEwin32static.txt  aclocal.m4  config.guess  config.sub  configure  ltmain.sh
debian/GeoIP-lib/apps/: Makefile.in  Makefile.vc  geoiplookup6.c  geoipupdate-pureperl.pl  geoipupdate.c
debian/GeoIP-lib/conf/: Makefile.am
debian/GeoIP-lib/data/: Makefile.am  Makefile.in
debian/GeoIP-lib/libGeoIP/: GeoIP.c  GeoIP.h  GeoIPCity.c  GeoIPUpdate.c  Makefile.am  Makefile.in  Makefile.vc  regionName.c  timeZone.c
debian/GeoIP-lib/man/: Makefile.am  geoiplookup6.1.in
debian/GeoIP-lib/test/: Makefile.am  Makefile.in  Makefile.vc
debian/patches/: 00list  01_basic_patch.dpatch  02_64bit.dpatch  03_history.dpatch  04_geolizer.dpatch  05_apache_logio.diff  05_apache_logio.dpatch  06_UserColor.dpatch  07_w3c-v4.dpatch  08_symlink_vulnerability.dpatch  09_ipv6_support.dpatch  10_remove_db1_dependence.dpatch  11_various_buffer_overflows.dpatch  12_recognize_Opera_browsers.dpatch  13_add_NoFollow_feature.dpatch  14_add_search_engines.diff  14_add_search_engines.dpatch  15_ignore_localhost.diff  15_ignore_localhost.dpatch  16_fix_typos_webalizer.1.dpatch  17_gettext.dpatch  18_ttf_support_throught_libgd.diff  18_ttf_support_throught_libgd.dpatch  19_add_PagePrefix_feature.dpatch  20_fix_capital_letter_option.dpatch  21_remove_-v_option.dpatch  22_php_as_htm_in_sample.conf.diff  22_php_as_htm_in_sample.conf.dpatch  23_gettext_first_part.diff  24_gettext_generated.diff  25_gettext_po_files.diff  27_fix_compilation_with_gcc-10.diff  80-fbsd01-patch-aa  80-fbsd02-patch-ab  80-fbsd03-patch-ac  80-fbsd04-patch-ad  80-fbsd05-patch-agent-bug  80-fbsd06-patch-linklist  80-fbsd07-patch-lowercase-url-bug  80-fbsd10-output.geo.patch  (+9 more)
debian/patches-all/: 00list  01_basic_patch.dpatch  02_64bit.dpatch  03_history.dpatch  04_geolizer.dpatch  05_apache_logio.dpatch  06_UserColor.dpatch  07_w3c-v4.dpatch  08_symlink_vulnerability.dpatch  09_ipv6_support.dpatch  10_remove_db1_dependence.dpatch  11_various_buffer_overflows.dpatch  12_recognize_Opera_browsers.dpatch  13_add_NoFollow_feature.dpatch  14_add_search_engines.dpatch  15_ignore_localhost.dpatch  16_fix_typos_webalizer.1.dpatch  17_gettext.dpatch  18_ttf_support_throught_libgd.dpatch  19_add_PagePrefix_feature.dpatch  90_xcode.diff  92_static.diff  series
debian/po/: ca.po  ca_ES.po  cs.po  da.po  de.po  es.po  eu.po  fi.po  fr.po  gl.po  it.po  ja.po  ko.po  nb.po  nl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  templates.pot  vi.po  zh_TW.po
lang/: LANGUAGE.README  webalizer_lang.albanian  webalizer_lang.arabic  webalizer_lang.catalan  webalizer_lang.chinese  webalizer_lang.croatian  webalizer_lang.czech  webalizer_lang.danish  webalizer_lang.dutch  webalizer_lang.english  webalizer_lang.estonian  webalizer_lang.finnish  webalizer_lang.french  webalizer_lang.galician  webalizer_lang.german  webalizer_lang.greek  webalizer_lang.hungarian  webalizer_lang.icelandic  webalizer_lang.indonesian  webalizer_lang.italian  webalizer_lang.japanese  webalizer_lang.korean  webalizer_lang.latvian  webalizer_lang.lithuanian  webalizer_lang.malay  webalizer_lang.norwegian  webalizer_lang.polish  webalizer_lang.portuguese  webalizer_lang.portuguese_brazil  webalizer_lang.romanian  webalizer_lang.romanian-iso-8859-2  webalizer_lang.russian  webalizer_lang.russian-cp1251  webalizer_lang.serbian  webalizer_lang.simplified_chinese  webalizer_lang.slovak  webalizer_lang.slovene  webalizer_lang.spanish  webalizer_lang.swedish  webalizer_lang.thai  (+2 more)
lang/CVS/: Entries  Repository
po/: ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ko.po  lv.po  ml.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  webalizer.pot  zh.po
